--- a/ebookFinder/templates/layout.html
+++ b/ebookFinder/templates/layout.html
@@ -22,20 +22,13 @@
 {#              <a href="" class="gnb-menu body-2">GNB1</a>#}
 {#              <a href="" class="gnb-menu body-2">GNB2</a>#}
 {#            </div>#}
-{#            <div class="right-nav push hide">#}
-{#              <div class="right-nav-list">#}
-{#                <a class="right-nav-item" href="#" data-toggle="dropdown">#}
-{#                  <i class="fas fa-bars fa-2x" style="color: #000;"></i>#}
-{#                </a>#}
-{#                <div class="nav-dropdown hide">#}
-{#                  <a tabindex="-1" class="nav-dropdown-item body-2" href=""><i class="fas fa-pen"></i>dropdown1#}
-{#                  </a>#}
-{#                  <div class="nav-divider"></div>#}
-{#                  <a tabindex="-1" class="nav-dropdown-item body-2" href=""><i class="fas fa-pen"></i>dropdown2#}
-{#                  </a>#}
-{#                </div>#}
-{#              </div>#}
-{#            </div>#}
+            <div class="right-nav push">
+              <div class="right-nav-list">
+                <a class="right-nav-item body-2" href="{% url 'users:instagram_login' %}">
+                  <i class="fab fa-instagram"></i> Instagram Login
+                </a>
+              </div>
+            </div>
           </nav>
         </div>
       </section>
