feat: add google oauth

--- a/ebookFinder/templates/layout.html
+++ b/ebookFinder/templates/layout.html
@@ -28,6 +28,9 @@
                   <a class="right-nav-item body-2" href="{% url 'users:instagram_login' %}">
                     <i class="fab fa-instagram"></i> Instagram Login
                   </a>
+                  <a class="right-nav-item body-2" href="{% url 'users:google_login' %}">
+                    <i class="fab fa-google"></i> Google Login
+                  </a>
                 </div>
               </div>
             </nav>
